crates/core/tests/ui/sql/fail/verify_live_mismatch.rs
use babar::sql;

fn main() {
    let _ = sql!("SELECT $id::int4", id = babar::codec::int8);
}
